# wagtail-tagmanager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  runtests.py
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yml
src/wagtail_tagmanager/: apps.py  forms.py  models.py  panels.py  test_settings.py  utils.py  views.py  viewsets.py
src/wagtail_tagmanager/admin/: bulk_actions.py  urls.py  viewsets.py
src/wagtail_tagmanager/templates/: add_pages_to_tag.html  manage_tagged_objects.html
src/wagtail_tagmanager/templates/wagtail_tagmanager/: add_pages_to_tag.html
tests/: factories.py  test_models.py  test_utils.py  test_views.py
tests/testapp/: models.py
tests/testapp/migrations/: 0001_initial.py
